added pto_request integration to timeworksplus also updated qqube-sync and qqube-validate with new regular expressions to parse job numbers